--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-encode": "^1.0.1",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "node-cron": "^4.2.1"
   }
 }
